2002-03-05  Cyrille Chepelov  <cyrille@chepelov.org>

	* lib/string_prerenderer.[ch] (REMOVED):
	* lib/render.h:
	* lib/diagramdata.c:
	* lib/Makefile.am:
	* app/render_eps.c: got rid of the string-specific string
	prerenderer, transitioned its functionality towards Lars'
	two-phase rendering

2002-03-05  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* configure.in: Using Freetypes own check for ver >= 1.0.5.  You
	may need to rerun aclocal.

2002-03-04  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/font.c: First attempt at Unicodeness for Freetype.

2002-03-02  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* lib/font.c (font_string_width): Fixed font_string_width for
	freetype.  BB is now almost right.

2002-03-01  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_eps.h: 
	* app/paginate_psprint.c (paginate_psprint): 
	* lib/font.c: 
	* app/render_eps.c: Support for dumping postscript fonts into
	postscript files with freetype.  Fairly primitive, but works.
	Unicode version may have problems.

2002-02-28  Akira TAGOH  <tagoh@redhat.com>

	* objects/UML/class_dialog.c (class_read_from_dialog)
	(class_fill_in_dialog), (class_create_page): add the font selector and
	the font size selector.

	* objects/UML/class.c (umlclass_draw): uses each font_height.
	(umlclass_calculate_data): ditto.
	(fill_in_fontdata): add initial value of new font_height.
	(umlclass_copy): add new font_height.

2002-02-27  Cyrille Chepelov  <chepelov@calixo.net>

	Patch from Geoff Gerrietts <ggerrietts@yahoo.com>:
	
	* lib/font.c: calculate font metrics properly and stop guessing at
	string widths.

2002-02-28  Akira TAGOH  <tagoh@redhat.com>

	* configure.in: changed gtk_advancement value to dia_talks_utf8.
	right now Dia is working with UTF-8 internally. it means Dia probably
	support most languages also including the languages which heretofore
	didn't work correctly.

2002-02-26  Akira TAGOH  <tagoh@redhat.com>
